fix: can wrap summary

--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@
   overflow: hidden;
   text-align: left;
   padding: 7px;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .box-date {
